--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -80,7 +80,7 @@ header {
 // Responsive scrolling
 .feature-image header {
     @media screen and (max-width: $break) {
-        padding: $padding-small $padding-small;
+        padding: $padding-small*2 $padding-small;
     }
 }
 
