--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -62,7 +62,7 @@ header {
         color: $feature-image-text-color;
         background-size: $feature-image-size;
         margin-bottom: 0;
-        padding: $padding-large/2 $padding-large;
+        padding: $padding-large/2.5 $padding-large;
         .meta {
             color: rgba($feature-image-text-color, .7);
         }
@@ -80,7 +80,7 @@ header {
 // Responsive scrolling
 .feature-image header {
     @media screen and (max-width: $break) {
-        padding: $padding-small*2 $padding-small;
+        padding: $padding-small $padding-small;
     }
 }
 
