--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -33,7 +33,7 @@
 }
 
 #main {
-    background-position: 100% 0, 0 center, center top; // Deals with position of images
+    background-position: 100% 15%, 0 center, center top;
 }
 
 // Post listing
@@ -68,7 +68,14 @@
         }
 
         .post-img img {
-            //max-width: 100%;
+            max-width: 100%;
+
+            position: relative;
+            top: 50%;
+
+            -moz-transform: translateY(-50%);
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
 
             -moz-transition-timing-function: ease-out;
             -webkit-transition-timing-function: ease-out;
@@ -78,11 +85,14 @@
             -webkit-transition: all 2s;
             transition: all 2s;
 
+            /* Weird Behaviour
             &:hover {
                 -moz-transform: scale(1.1);
                 -webkit-transform: scale(1.1);
                 transform: scale(1.1);
-            }
+
+                transform-origin: 50% 600%;
+            }*/
         }
     }
     .excerpt {
