Simple author section

--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -17,6 +17,7 @@
 @import 'layouts/search';
 
 // Includes
+@import 'includes/author';
 @import 'includes/footer';
 @import 'includes/post_nav';
 @import 'includes/navbar';
