--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <h1 id="{{ page.title | cgi_escape }}" class="title">{{ page.title }}</h1>
     <p class="meta">
     {{ page.date | date: "%B %-d, %Y" }}
-    {% if page.author %} - {{ page.author }}{% endif %}
+    <!-- {% if page.author %} - {{ page.author }}{% endif %} -->
     </p>
   </header>
   <section class="post-content">
@@ -18,14 +18,17 @@ layout: default
   </div>
   {% endif %}
   </section>
-  
+
+  <!-- Author -->
+  {% include author.html %}
+
   <!-- Social media shares -->
   {% include share_buttons.html %}
-   
+
    <!-- Tag list -->
   {% capture tag_list %}{{ page.tags | join: "|"}}{% endcapture %}
   {% include tags_list.html tags=tag_list %}
-    
+
 </article>
 
 <!-- Disqus -->
