Rating circles added

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,9 @@ layout: default
   {% endif %}
   </section>
 
+  <!-- Rating -->
+  {% include rating.html %}
+
   <!-- Author -->
   {% include author.html %}
 
