--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -21,4 +21,5 @@
 @import 'includes/footer';
 @import 'includes/post_nav';
 @import 'includes/navbar';
+@import 'includes/rating';
 @import 'includes/share_buttons';
