--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,13 @@ layout: default
     <div class="post-teaser">
       {% if post.thumbnail %}
       <div class="post-img">
-         <img src="{{ site.baseurl }}/{{ post.thumbnail }}"
-         style="top:{{ post.thumbnail_drop }}%;
-                -moz-transform:translateY(-{{ post.thumbnail_drop }}%);
-                -webkit-transform:translateY(-{{ post.thumbnail_drop }}%);
-                transform:translateY(-{{ post.thumbnail_drop }}%);">
+        <a href="{{ post.url | prepend: site.baseurl }}">
+          <img src="{{ site.baseurl }}/{{ post.thumbnail }}"
+          style="top:{{ post.thumbnail_drop }}%;
+          -moz-transform:translateY(-{{ post.thumbnail_drop }}%);
+          -webkit-transform:translateY(-{{ post.thumbnail_drop }}%);
+          transform:translateY(-{{ post.thumbnail_drop }}%);">
+        </a>
       </div>
       {% endif %}
       <span>
