Stacked post nav for better view on mobile

--- a/_sass/includes/_post_nav.scss
+++ b/_sass/includes/_post_nav.scss
@@ -2,21 +2,33 @@
     width: 100%;
     display: inline-block;
     @extend %padding-small;
-   
+
+    p {
+        @extend .meta;
+        width: 100%;
+    }
+
     a {
         width: 100%;
         padding: 0;
         margin: 0;
     }
-    p {
-        @extend .meta;
-    }
-    
+
     #previous-post {
         float: left;
+        width: 100%;
+
+        p, a {
+          text-align: left;
+        }
     }
-    
+
     #next-post {
         float: right;
+        width: 100%;
+
+        p, a {
+          text-align: right;
+        }
     }
 }
